--- a/index.html
+++ b/index.html
@@ -388,39 +388,8 @@
 		</table>
 
 		<div id="foobar">
-            1.9: 垃圾gitee无故封我服务，改成github.<br>
-            1.8: 参考《全境征才tag收集表》，为几乎所有角色补全了体型和乳量词缀，待更多确认
-            <br>
-            1.7: 添加艾可专属词缀【支援】，为剑圣，狐妖，蛇女添加削弱词缀，为军师添加爆发+削弱词缀。待更多确认。
-            <br>
-			给出你的tag，帮你算能获得什么<del>1星</del>角色
-			<br>
-			作者小r
-			<br>
-			公测阶段，有错误联系【克里斯之门攻略组】 群号1009723104，带上错误信息
-			<br>
-			招募时间太短/没有符合条件的角色，会随机删除词缀
-			<br>
-			我没有出过领袖词缀，可能有问题
-			<br>
-			如果同时可能获得高星和低星，极大概率是低星
-			<br>
-			神无雪可能没有火属性，妖狐可能没有水属性，需要更多反馈
-			<br>
-            辅助者必出女仆，风群体出女忍者，光妨碍/妨碍群体出军师，水守护/人守护出蕾欧娜
-            <br>
-            1.3: 经过分析，女仆没有回复词缀，或者没有魔族+暗属性词缀，暂删除了回复词缀。
-            <br>
-            1.3: 已经消除了只能选5个的限制。如果你都选上，可以拿到1份必出2星的清单。
-            <br>
-            1.4: 为狐娘添加了小体型词缀
-            <br>
-            1.5: 页面由于缓存原因刷新不及时，已尝试修复
-            <br>
-            1.5.1: 为撒旦添加了中体型词缀
-            <br>
-            1.6: 为雷欧娜添加保护词缀
-            <br>
+               已经过一个月的测试，基本稳定。有错误联系【克里斯之门攻略组】 群号1009723104，带上错误信息</br>
+		最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki</a>
 		</div>
 
 		<div hidden>如你所见本页面没有任何加密，因此请勿随意盗用本页面</div>
