尝试添加一个评论区

--- a/index.html
+++ b/index.html
@@ -294,6 +294,19 @@
             return result;
         }
     </script>
+	<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+		<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+		<script>
+		  var gitment = new Gitment({
+		    owner: 'RShock',
+		    repo: 'https://github.com/RShock/RShock.github.io',
+		    oauth: {
+		      client_id: 'fa9551ce32916848fb47',
+		      client_secret: ' 09aac01b8785296f7bfd991b63e5d2ee7c74ec74',
+		    }
+		  })
+		  gitment.render('git-comments')
+		</script>
 
 <body style="background:#F8F8FF"
 	id="body">
@@ -391,7 +404,8 @@
                已经过一个月的测试，基本稳定。有错误联系【克里斯之门攻略组】 群号1009723104，带上错误信息</br>
 		最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki</a>
 		</div>
-
+		<div id="git-comments"></div>
+		
 		<div hidden>如你所见本页面没有任何加密，因此请勿随意盗用本页面</div>
 	</div>
 </body>
