--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
 	<!-- <link rel="stylesheet" href="style.css" /> -->
+	<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+	
 	<style>
 		#center_box {
 			margin: 0 auto;
@@ -181,7 +183,6 @@
         }
 
         function checkCharaIsMatch(tags) {
-            // console.log(tags);
             var tmpAns = []
             dataset.forEach(function (value, key, arr) {
                 if (isContain(value, tags)) {
@@ -293,23 +294,19 @@
             };
             return result;
         }
-    </script>
-	<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-		<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
-		<script>
-		  var gitment = new Gitment({
-		    owner: 'RShock',
-		    repo: 'https://github.com/RShock/RShock.github.io',
-		    oauth: {
-		      client_id: 'fa9551ce32916848fb47',
-		      client_secret: ' 09aac01b8785296f7bfd991b63e5d2ee7c74ec74',
-		    }
+		
+		var gitment = new Gitment({
+			owner: 'RShock',
+			repo: 'RShock.github.io',
+			oauth: {
+			  client_id: 'fa9551ce32916848fb47',
+			  client_secret: ' 09aac01b8785296f7bfd991b63e5d2ee7c74ec74',
+			}
 		  })
 		  gitment.render('git-comments')
-		</script>
-
-<body style="background:#F8F8FF"
-	id="body">
+    </script>
+	<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+<body style="background:#F8F8FF" id="body">
 	<div id="center_box">
 		<h1>全境征才计算器 Ver1.9</h1>
 
