--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
 		</div>
 		<div id="gitalk-container"></div>
     <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-    <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
-		<script>
+    <script src="./scirpt/gitalk.js"></script>
+	<script>
       const gitalk = new Gitalk({
         clientID: 'fa9551ce32916848fb47',
         clientSecret: 'fc3af79caaca798efb60586a967764bff4192909',
