--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 		</div>
 		<div id="gitalk-container"></div>
     <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-    <script src="./scirpt/gitalk.js"></script>
+    <script src="js/gitalk.js"></script>
 	<script>
       const gitalk = new Gitalk({
         clientID: 'fa9551ce32916848fb47',
