--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       ["3☆精灵王 赛露西亚", "领袖", "风属性", "亚人", "中体型", "巨乳", "辅助者", "爆发"],
       ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发"],
       ["3☆法斯公主 露露", "领袖", "风属性", "人类", "治疗者", "回复"],
-      ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "攻击者", "生存力", "回复"],
+      ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "回复"],
       ["3☆KS-VIII 魔人偶", "领袖"],
       ["3☆圣米勒 天使长", "领袖"],
 
@@ -296,7 +296,7 @@
 
 <body style="background:#F8F8FF" id="body">
   <div id="center_box">
-    <h1>全境征才计算器 Ver1.9</h1>
+    <h1>全境征才计算器 Ver2.0 by 小r</h1>
 
     <button type="button" class='btn_normal'>攻击者</button>
     <button type="button" class='btn_normal'>守护者</button>
