--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     window.onload = function () {
       // 调整屏幕宽度
       getDevice()
-      var arr = document.getElementsByClassName('btn_normal');
+      var arr = document.getElementsByClassName('btn_normal btn');
       for (var i = 0; i < arr.length; i++) {
         arr[i].className = 'btn_normal btn';
         arr[i].onclick = function () {
@@ -298,44 +298,44 @@
   <div id="center_box">
     <h1>全境征才计算器 Ver2.0 by 小r</h1>
 
-    <button type="button" class='btn_normal'>攻击者</button>
-    <button type="button" class='btn_normal'>守护者</button>
-    <button type="button" class='btn_normal'>辅助者</button>
-    <button type="button" class='btn_normal'>治疗者</button>
-    <button type="button" class='btn_normal'>妨碍者</button>
+    <button type="button" class='btn_normal btn'>攻击者</button>
+    <button type="button" class='btn_normal btn'>守护者</button>
+    <button type="button" class='btn_normal btn'>辅助者</button>
+    <button type="button" class='btn_normal btn'>治疗者</button>
+    <button type="button" class='btn_normal btn'>妨碍者</button>
     <br>
-    <button type="button" class='btn_normal'>魔族</button>
-    <button type="button" class='btn_normal'>亚人</button>
-    <button type="button" class='btn_normal'>人类</button>
+    <button type="button" class='btn_normal btn'>魔族</button>
+    <button type="button" class='btn_normal btn'>亚人</button>
+    <button type="button" class='btn_normal btn'>人类</button>
     <br>
-    <button type="button" class='btn_normal'>贫乳</button>
-    <button type="button" class='btn_normal'>美乳</button>
-    <button type="button" class='btn_normal'>巨乳</button>
+    <button type="button" class='btn_normal btn'>贫乳</button>
+    <button type="button" class='btn_normal btn'>美乳</button>
+    <button type="button" class='btn_normal btn'>巨乳</button>
     <br>
-    <button type="button" class='btn_normal'>小体型</button>
-    <button type="button" class='btn_normal'>中体型</button>
+    <button type="button" class='btn_normal btn'>小体型</button>
+    <button type="button" class='btn_normal btn'>中体型</button>
     <br>
-    <button type="button" class='btn_normal'>爆发</button>
-    <button type="button" class='btn_normal'>回复</button>
-    <button type="button" class='btn_normal'>输出</button>
-    <button type="button" class='btn_normal'>削弱</button>
-    <button type="button" class='btn_normal'>干扰</button>
-    <button type="button" class='btn_normal'>保护</button>
-    <button type="button" class='btn_normal'>生存力</button>
-    <button type="button" class='btn_normal'>群体攻击</button>
-    <button type="button" class='btn_normal'>士兵</button>
-    <button type="button" class='btn_normal'>越战越强</button>
-    <button type="button" class='btn_normal'>防御</button>
-    <button type="button" class='btn_normal'>支援</button>
+    <button type="button" class='btn_normal btn'>爆发</button>
+    <button type="button" class='btn_normal btn'>回复</button>
+    <button type="button" class='btn_normal btn'>输出</button>
+    <button type="button" class='btn_normal btn'>削弱</button>
+    <button type="button" class='btn_normal btn'>干扰</button>
+    <button type="button" class='btn_normal btn'>保护</button>
+    <button type="button" class='btn_normal btn'>生存力</button>
+    <button type="button" class='btn_normal btn'>群体攻击</button>
+    <button type="button" class='btn_normal btn'>士兵</button>
+    <button type="button" class='btn_normal btn'>越战越强</button>
+    <button type="button" class='btn_normal btn'>防御</button>
+    <button type="button" class='btn_normal btn'>支援</button>
     <br>
-    <button type="button" class='btn_normal'>火属性</button>
-    <button type="button" class='btn_normal'>风属性</button>
-    <button type="button" class='btn_normal'>暗属性</button>
-    <button type="button" class='btn_normal'>光属性</button>
-    <button type="button" class='btn_normal'>水属性</button>
+    <button type="button" class='btn_normal btn'>火属性</button>
+    <button type="button" class='btn_normal btn'>风属性</button>
+    <button type="button" class='btn_normal btn'>暗属性</button>
+    <button type="button" class='btn_normal btn'>光属性</button>
+    <button type="button" class='btn_normal btn'>水属性</button>
     <br>
-    <button type="button" class='btn_normal'>领袖</button>
-    <button type="button" class='btn_normal'>精锐</button>
+    <button type="button" class='btn_normal btn'>领袖</button>
+    <button type="button" class='btn_normal btn'>精锐</button>
     <br>
     <button type="button" class="btn_resetAllTags btn" onclick="resetAllTags()">重置选择</button>
     <br>
