--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 
     var dataset = [
       ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发"],
-      ["3☆魔王 撒旦", "领袖", "暗属性", "魔族", "中体型", "守护者", "生存力", "反击"],
-      ["3☆精灵王 赛露西亚", "领袖", "风属性", "亚人", "中体型", "巨乳", "辅助者", "爆发"],
+      ["3☆魔王 撒旦", "领袖", "暗属性", "魔族", "中体型", "守护者", "生存力", "回击"],
+      ["3☆精灵王 赛露西亚", "领袖", "风属性", "亚人", "中体型", "巨乳", "辅助者", "爆发", "支援"],
       ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发"],
       ["3☆法斯公主 露露", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "回复"],
@@ -238,8 +238,8 @@
       ["2☆女忍者 凛月", "精锐", "风属性", "人类", "攻击者", "美乳", "小体型", "输出", "群体攻击", "爆发"],
       ["2☆剑圣 神无雪", "精锐", "火属性", "亚人", "攻击者", "美乳", "中体型", "越战越强", "削弱"],
       ["2☆妖狐 静", "精锐", "水属性", "美乳", "妨碍者", "亚人", "小体型", "削弱"],
-      ["2☆大将军 朱诺安", "精锐", "暗属性", "人类", "攻击者", "巨乳", "中体型", "输出",],
-      ["2☆天才女军师 布兰妮", "精锐", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发", "支援"],
+      ["2☆大将军 朱诺安", "精锐", "暗属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
+      ["2☆天才女军师 布兰妮", "精锐", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发"],
 
       ["1☆流浪魔法师 尤依", "士兵", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯", "士兵", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
@@ -296,7 +296,7 @@
 
 <body style="background:#F8F8FF" id="body">
   <div id="center_box">
-    <h1>全境征才计算器 Ver2.0 by 小r</h1>
+    <h1>全境征才计算器 Ver2.1 by 小r</h1>
 
     <button type="button" class='btn_normal btn'>攻击者</button>
     <button type="button" class='btn_normal btn'>守护者</button>
@@ -336,6 +336,7 @@
     <br>
     <button type="button" class='btn_normal btn'>领袖</button>
     <button type="button" class='btn_normal btn'>精锐</button>
+    <button type="button" class='btn_normal btn'>回击</button>
     <br>
     <button type="button" class="btn_resetAllTags btn" onclick="resetAllTags()">重置选择</button>
     <br>
