--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
       ["2☆妖狐 静", "精锐", "水属性", "美乳", "妨碍者", "亚人", "小体型", "削弱"],
       ["2☆大将军 朱诺安", "精锐", "暗属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
       ["2☆天才女军师 布兰妮", "精锐", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发"],
+      ["2☆史莱姆女王 娜芙拉拉", "精锐", "风属性", "魔族", "守护者", "美乳", "中体型", "保护", "防御", "生存力", "回复"],
 
       ["1☆流浪魔法师 尤依", "士兵", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯", "士兵", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
@@ -296,7 +297,7 @@
 
 <body style="background:#F8F8FF" id="body">
   <div id="center_box">
-    <h1>全境征才计算器 Ver2.1 by 小r</h1>
+    <h1>全境征才计算器 Ver2.2 by 小r</h1>
 
     <button type="button" class='btn_normal btn'>攻击者</button>
     <button type="button" class='btn_normal btn'>守护者</button>
@@ -352,6 +353,7 @@
     </table>
 
     <div id="foobar">
+      <b>2.2：添加了史莱姆女王的数据。</b>
       已经过一个月的测试，基本稳定。有错误联系【克里斯之门攻略组】 群号1009723104，带上错误信息</br>
       最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki</a>
     </div>
