--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       ["1☆魅魔 撒芭丝", "士兵", "暗属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
       ["1☆暗黑精灵 索拉卡", "士兵", "暗属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
 
-      ["0☆法斯帝国法师 佩托拉", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵"],
+      ["0☆法斯帝国法师 佩托拉", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵", "越战越强"],
       ["0☆矮人战士 可儿", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发", "士兵"],
       ["0☆精灵射手 奥菈", "风属性", "攻击者", "亚人", "美乳", "中体型", "输出", "士兵"],
       ["0☆魔族法师 玛努艾拉", "暗属性", "攻击者", "中体型", "魔族", "美乳", "输出", "士兵"],
