--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
 
     <div id="foobar">
       <b>2.2：添加了史莱姆女王的数据。</b>
+      我的评论区似乎一登陆就会出错，所以有问题还是贴吧反馈吧。。另外原先的地址依然可以使用（貌似）： <a href="xiaorrr.gitee.io/tenkafuma">xiaorrr.gitee.io/tenkafuma</a>
       已经过一个月的测试，基本稳定。有错误联系【克里斯之门攻略组】 群号1009723104，带上错误信息</br>
       最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki</a>
     </div>
