--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
       ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发"],
       ["3☆法斯公主 露露", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "回复"],
-      ["3☆KS-VIII 魔人偶", "领袖"],
+      ["3☆蛇女之后 梅斯米奈雅", "领袖", "火属性", "妨碍者"],
+      ["3☆KS-VIII 魔人偶", "暗属性", "攻击者", "领袖"],
       ["3☆圣米勒 天使长", "领袖"],
 
       ["2☆魔管家 艾可", "精锐", "暗属性", "魔族", "辅助者", "美乳", "支援"],
@@ -265,7 +266,10 @@
       ["0☆圣光骑士 玛蒂娜", "光属性", "守护者", "人类", "美乳", "中体型", "保护", "生存力", "防御", "士兵"],
       ["0☆双蛇军团士兵 夏琳", "火属性", "守护者", "人类", "美乳", "中体型", "防御", "群体攻击", "保护", "士兵"],
       ["0☆烈日国巫女 枫", "风属性", "治疗者", "人类", "美乳", "中体型", "回复", "越战越强", "士兵"],
-      ["0☆主神教团僧兵 克蕾雅", "光属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"]
+      ["0☆主神教团僧兵 克蕾雅", "光属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
+      ["0☆试做机三号", "光属性", "攻击者", "小体型", "士兵"],
+      ["0☆法斯精锐近卫 安娜", "光属性", "守护者", "人类", "防御", "士兵"],
+      ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵"]
     ]
 
     function getDevice() {
@@ -353,8 +357,8 @@
     </table>
 
     <div id="foobar">
-      <b>2.2：添加了史莱姆女王的数据。</b>
-      我的评论区似乎一登陆就会出错，所以有问题还是贴吧反馈吧。。另外原先的地址依然可以使用（貌似）： <a href="xiaorrr.gitee.io/tenkafuma">xiaorrr.gitee.io/tenkafuma</a>
+      <b>2.2：添加了史莱姆女王的数据。以及其他新角色的不完整数据</b></br>
+      之前以为这个网页坏了所以一直在 rshock.github.io 更新，现在在这边也更新了。有问题直接贴吧反馈吧。</br>
       已经过一个月的测试，基本稳定。有错误联系【克里斯之门攻略组】 群号1009723104，带上错误信息</br>
       最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki</a>
     </div>
