--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 
     <div id="foobar">
       <b>2.2：添加了史莱姆女王的数据。以及其他新角色的不完整数据</b></br>
-      发现国内地址还能用，可以尝试去用： <a href="https://xiaorrr.gitee.io/tenkafuma/">https://xiaorrr.gitee.io/tenkafuma/</a>
+      发现国内地址还能用，可以尝试去用： <a href="https://xiaorrr.gitee.io/tenkafuma/">https://xiaorrr.gitee.io/tenkafuma/</a></br>
       已经过一个月的测试，基本稳定。有错误联系【克里斯之门攻略组】 群号1009723104，带上错误信息</br>
       最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki</a>
     </div>
