--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       ["2☆妖狐 静", "精锐", "水属性", "美乳", "妨碍者", "亚人", "小体型", "削弱"],
       ["2☆大将军 朱诺安", "精锐", "暗属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
       ["2☆天才女军师 布兰妮", "精锐", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发"],
-      ["2☆史莱姆女王 娜芙拉拉", "精锐", "风属性", "魔族", "守护者", "美乳", "中体型", "保护", "防御", "生存力", "回复"],
+      ["2☆史莱姆女王 娜芙拉拉", "精锐", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
 
       ["1☆流浪魔法师 尤依", "士兵", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯", "士兵", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
