--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     function isContain(arr1, arr2) {
       if (arr2.length == 0) return false;
       var isLV3 = arr2.includes("领袖");
-      var isLV2 = arr2.includes("精锐");
+      var isLV2 = arr2.includes("菁英");
       for (var i = arr2.length - 1; i >= 0; i--) {
         if (!isLV3 && arr1.includes("领袖")) {
           return false;
@@ -223,25 +223,25 @@
     }
 
     var dataset = [
-      ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发"],
+      ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力"],
       ["3☆魔王 撒旦", "领袖", "暗属性", "魔族", "中体型", "守护者", "生存力", "回击"],
-      ["3☆精灵王 赛露西亚", "领袖", "风属性", "亚人", "中体型", "巨乳", "辅助者", "爆发", "支援"],
-      ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发"],
+      ["3☆精灵王 赛露西亚", "领袖", "风属性", "亚人", "中体型", "巨乳", "辅助者", "爆发力", "支援"],
+      ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力"],
       ["3☆法斯公主 露露", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "回复"],
       ["3☆蛇女之后 梅斯米奈雅", "领袖", "火属性", "妨碍者"],
       ["3☆KS-VIII 魔人偶", "暗属性", "攻击者", "领袖"],
       ["3☆圣米勒 天使长", "领袖"],
 
-      ["2☆魔管家 艾可", "精锐", "暗属性", "魔族", "辅助者", "美乳", "支援"],
-      ["2☆圣骑士长 雷欧娜", "精锐", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
-      ["2☆神官长 菲欧菈", "精锐", "光属性", "人类", "治疗者", "美乳", "中体型", "回复"],
-      ["2☆女忍者 凛月", "精锐", "风属性", "人类", "攻击者", "美乳", "小体型", "输出", "群体攻击", "爆发"],
-      ["2☆剑圣 神无雪", "精锐", "火属性", "亚人", "攻击者", "美乳", "中体型", "越战越强", "削弱"],
-      ["2☆妖狐 静", "精锐", "水属性", "美乳", "妨碍者", "亚人", "小体型", "削弱"],
-      ["2☆大将军 朱诺安", "精锐", "暗属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
-      ["2☆天才女军师 布兰妮", "精锐", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发"],
-      ["2☆史莱姆女王 娜芙拉拉", "精锐", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
+      ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "美乳", "支援"],
+      ["2☆圣骑士长 雷欧娜", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
+      ["2☆神官长 菲欧菈", "菁英", "光属性", "人类", "治疗者", "美乳", "中体型", "回复"],
+      ["2☆女忍者 凛月", "菁英", "风属性", "人类", "攻击者", "美乳", "小体型", "输出", "群体攻击", "爆发力"],
+      ["2☆剑圣 神无雪", "菁英", "火属性", "亚人", "攻击者", "美乳", "中体型", "越战越强", "削弱"],
+      ["2☆妖狐 静", "菁英", "水属性", "美乳", "妨碍者", "亚人", "小体型", "削弱"],
+      ["2☆大将军 朱诺安", "菁英", "暗属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
+      ["2☆天才女军师 布兰妮", "菁英", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发力"],
+      ["2☆史莱姆女王 娜芙拉拉", "菁英", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
 
       ["1☆流浪魔法师 尤依", "士兵", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯", "士兵", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
@@ -253,7 +253,7 @@
       ["1☆暗黑精灵 索拉卡", "士兵", "暗属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
 
       ["0☆法斯帝国法师 佩托拉", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵", "越战越强"],
-      ["0☆矮人战士 可儿", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发", "士兵"],
+      ["0☆矮人战士 可儿", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发力", "士兵"],
       ["0☆精灵射手 奥菈", "风属性", "攻击者", "亚人", "美乳", "中体型", "输出", "士兵"],
       ["0☆魔族法师 玛努艾拉", "暗属性", "攻击者", "中体型", "魔族", "美乳", "输出", "士兵"],
       ["0☆烈日国武士 桔梗", "火属性", "妨碍者", "人类", "美乳", "中体型", "削弱", "输出", "士兵"],
@@ -268,7 +268,7 @@
       ["0☆烈日国巫女 枫", "风属性", "治疗者", "人类", "美乳", "中体型", "回复", "越战越强", "士兵"],
       ["0☆主神教团僧兵 克蕾雅", "光属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
       ["0☆试做机三号", "光属性", "攻击者", "小体型", "士兵"],
-      ["0☆法斯精锐近卫 安娜", "光属性", "守护者", "人类", "防御", "士兵"],
+      ["0☆法斯菁英近卫 安娜", "光属性", "守护者", "人类", "防御", "士兵"],
       ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵"]
     ]
 
@@ -320,7 +320,7 @@
     <button type="button" class='btn_normal btn'>小体型</button>
     <button type="button" class='btn_normal btn'>中体型</button>
     <br>
-    <button type="button" class='btn_normal btn'>爆发</button>
+    <button type="button" class='btn_normal btn'>爆发力</button>
     <button type="button" class='btn_normal btn'>回复</button>
     <button type="button" class='btn_normal btn'>输出</button>
     <button type="button" class='btn_normal btn'>削弱</button>
@@ -340,7 +340,7 @@
     <button type="button" class='btn_normal btn'>水属性</button>
     <br>
     <button type="button" class='btn_normal btn'>领袖</button>
-    <button type="button" class='btn_normal btn'>精锐</button>
+    <button type="button" class='btn_normal btn'>菁英</button>
     <button type="button" class='btn_normal btn'>回击</button>
     <br>
     <button type="button" class="btn_resetAllTags btn" onclick="resetAllTags()">重置选择</button>
