--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     }
 
     var dataset = [
-      ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力"],
+      ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者"],
       ["3☆魔王 撒旦", "领袖", "暗属性", "魔族", "中体型", "守护者", "生存力", "回击"],
       ["3☆精灵王 赛露西亚", "领袖", "风属性", "亚人", "中体型", "巨乳", "辅助者", "爆发力", "支援"],
       ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力"],
@@ -258,7 +258,7 @@
       ["0☆魔族法师 玛努艾拉", "暗属性", "攻击者", "中体型", "魔族", "美乳", "输出", "士兵"],
       ["0☆烈日国武士 桔梗", "火属性", "妨碍者", "人类", "美乳", "中体型", "削弱", "输出", "士兵"],
       ["0☆蛇女 拉米亚", "火属性", "妨碍者", "美乳", "中体型", "削弱", "干扰", "士兵"],
-      ["0☆史莱姆娘 萝尔", "水属性", "妨碍者", "魔族", "美乳", "小体型", "削弱", "生存力", "士兵"],
+      ["0☆史莱姆娘 萝尔", "水属性", "妨碍者", "魔族", "美乳", "小体型", "削弱", "生存力", "士兵", "回复"],
       ["0☆鸟身女妖 哈比", "风属性", "妨碍者", "魔族", "美乳", "小体型", "干扰", "士兵"],
       ["0☆法斯帝国士兵 赛莲", "暗属性", "守护者", "人类", "美乳", "中体型", "保护", "防御", "士兵"],
       ["0☆牛女 米诺", "风属性", "守护者", "亚人", "巨乳", "中体型", "干扰", "保护", "防御", "士兵"],
@@ -269,7 +269,7 @@
       ["0☆主神教团僧兵 克蕾雅", "光属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
       ["0☆试做机三号", "光属性", "攻击者", "小体型", "士兵"],
       ["0☆法斯菁英近卫 安娜", "光属性", "守护者", "人类", "防御", "士兵"],
-      ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵"]
+      ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"]
     ]
 
     function getDevice() {
@@ -357,7 +357,8 @@
     </table>
 
     <div id="foobar">
-      <b>2.2：添加了史莱姆女王的数据。以及其他新角色的不完整数据</b></br>
+      <b>2.3：根据贴吧反馈移除了巴尔的爆发词缀。游戏更新为小史莱姆添加了回复词缀，刷女王变难了</b></br>
+      2.2：添加了史莱姆女王的数据。以及其他新角色的不完整数据</br>
       发现国内地址还能用，可以尝试去用： <a href="https://xiaorrr.gitee.io/tenkafuma/">https://xiaorrr.gitee.io/tenkafuma/</a></br>
       已经过一个月的测试，基本稳定。有错误联系【克里斯之门攻略组】 群号1009723104，带上错误信息</br>
       最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki</a>
