--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       ["1☆龙女 伊维斯", "士兵", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
       ["1☆猫妖 娜娜", "士兵", "风属性", "攻击者", "魔族", "贫乳", "小体型", "输出"],
       ["1☆美人鱼 玛莲", "士兵", "水属性", "治疗者", "亚人", "美乳", "中体型", "回复"],
-      ["1☆犬人族 朵拉", "士兵", "风属性", "守护者", "亚人", "美乳", "保护", "生存力", "中体型", "防御", "生存"],
+      ["1☆犬人族 朵拉", "士兵", "风属性", "守护者", "亚人", "美乳", "保护", "生存力", "中体型", "防御"],
       ["1☆双蛇军团护士长 艾琳", "士兵", "光属性", "治疗者", "人类", "巨乳", "中体型", "回复"],
       ["1☆魅魔 撒芭丝", "士兵", "暗属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
       ["1☆暗黑精灵 索拉卡", "士兵", "暗属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
