--- a/index.html
+++ b/index.html
@@ -223,53 +223,54 @@
     }
 
     var dataset = [
-      ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者"],
+      ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力"],
       ["3☆魔王 撒旦", "领袖", "暗属性", "魔族", "中体型", "守护者", "生存力", "回击"],
       ["3☆精灵王 赛露西亚", "领袖", "风属性", "亚人", "中体型", "巨乳", "辅助者", "爆发力", "支援"],
       ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力"],
       ["3☆法斯公主 露露", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "回复"],
       ["3☆蛇女之后 梅斯米奈雅", "领袖", "火属性", "妨碍者"],
-      ["3☆KS-VIII 魔人偶", "暗属性", "攻击者", "领袖"],
+      ["3☆KS-VIII 魔人偶", "暗属性", "攻击者", "领袖", "爆发力"],
       ["3☆圣米勒 天使长", "领袖"],
 
-      ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "美乳", "支援"],
+      ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
       ["2☆神官长 菲欧菈", "菁英", "光属性", "人类", "治疗者", "美乳", "中体型", "回复"],
       ["2☆女忍者 凛月", "菁英", "风属性", "人类", "攻击者", "美乳", "小体型", "输出", "群体攻击", "爆发力"],
       ["2☆剑圣 神无雪", "菁英", "火属性", "亚人", "攻击者", "美乳", "中体型", "越战越强", "削弱"],
-      ["2☆妖狐 静", "菁英", "水属性", "美乳", "妨碍者", "亚人", "小体型", "削弱"],
+      ["2☆妖狐 静", "菁英", "水属性", "美乳", "妨碍者", "亚人", "小体型", "削弱", "干扰"],
       ["2☆大将军 朱诺安", "菁英", "暗属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
-      ["2☆天才女军师 布兰妮", "菁英", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发力"],
+      ["2☆天才女军师 布兰妮", "菁英", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发力", "支援"],
       ["2☆史莱姆女王 娜芙拉拉", "菁英", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
 
-      ["1☆流浪魔法师 尤依", "士兵", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
-      ["1☆龙女 伊维斯", "士兵", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
-      ["1☆猫妖 娜娜", "士兵", "风属性", "攻击者", "魔族", "贫乳", "小体型", "输出"],
-      ["1☆美人鱼 玛莲", "士兵", "水属性", "治疗者", "亚人", "美乳", "中体型", "回复"],
-      ["1☆犬人族 朵拉", "士兵", "风属性", "守护者", "亚人", "美乳", "保护", "生存力", "中体型", "防御"],
-      ["1☆双蛇军团护士长 艾琳", "士兵", "光属性", "治疗者", "人类", "巨乳", "中体型", "回复"],
-      ["1☆魅魔 撒芭丝", "士兵", "暗属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
-      ["1☆暗黑精灵 索拉卡", "士兵", "暗属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
+      ["1☆流浪魔法师 尤依", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
+      ["1☆龙女 伊维斯", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
+      ["1☆猫妖 娜娜", "风属性", "攻击者", "魔族", "贫乳", "小体型", "输出"],
+      ["1☆美人鱼 玛莲", "水属性", "治疗者", "亚人", "美乳", "中体型", "回复"],
+      ["1☆犬人族 朵拉", "风属性", "守护者", "亚人", "美乳", "保护", "生存力", "中体型", "防御"],
+      ["1☆双蛇军团护士长 艾琳", "光属性", "治疗者", "人类", "巨乳", "中体型", "回复"],
+      ["1☆魅魔 撒芭丝", "暗属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
+      ["1☆暗黑精灵 索拉卡", "暗属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
 
       ["0☆法斯帝国法师 佩托拉", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵", "越战越强"],
       ["0☆矮人战士 可儿", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发力", "士兵"],
       ["0☆精灵射手 奥菈", "风属性", "攻击者", "亚人", "美乳", "中体型", "输出", "士兵"],
       ["0☆魔族法师 玛努艾拉", "暗属性", "攻击者", "中体型", "魔族", "美乳", "输出", "士兵"],
-      ["0☆烈日国武士 桔梗", "火属性", "妨碍者", "人类", "美乳", "中体型", "削弱", "输出", "士兵"],
+      ["0☆烈日国武士 桔梗", "火属性", "妨碍者", "人类", "美乳", "中体型", "削弱", "士兵"],
       ["0☆蛇女 拉米亚", "火属性", "妨碍者", "美乳", "中体型", "削弱", "干扰", "士兵"],
       ["0☆史莱姆娘 萝尔", "水属性", "妨碍者", "魔族", "美乳", "小体型", "削弱", "生存力", "士兵", "回复"],
       ["0☆鸟身女妖 哈比", "风属性", "妨碍者", "魔族", "美乳", "小体型", "干扰", "士兵"],
       ["0☆法斯帝国士兵 赛莲", "暗属性", "守护者", "人类", "美乳", "中体型", "保护", "防御", "士兵"],
-      ["0☆牛女 米诺", "风属性", "守护者", "亚人", "巨乳", "中体型", "干扰", "保护", "防御", "士兵"],
+      ["0☆牛女 米诺", "风属性", "守护者", "亚人", "巨乳", "中体型", "干扰", "保护", "防御", "生存力", "士兵"],
       ["0☆魔族战士 芙蕾", "光属性", "守护者", "魔族", "美乳", "中体型", "保护", "士兵", "防御"],
       ["0☆圣光骑士 玛蒂娜", "光属性", "守护者", "人类", "美乳", "中体型", "保护", "生存力", "防御", "士兵"],
       ["0☆双蛇军团士兵 夏琳", "火属性", "守护者", "人类", "美乳", "中体型", "防御", "群体攻击", "保护", "士兵"],
       ["0☆烈日国巫女 枫", "风属性", "治疗者", "人类", "美乳", "中体型", "回复", "越战越强", "士兵"],
       ["0☆主神教团僧兵 克蕾雅", "光属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
-      ["0☆试做机三号", "光属性", "攻击者", "小体型", "士兵"],
-      ["0☆法斯菁英近卫 安娜", "光属性", "守护者", "人类", "防御", "士兵"],
-      ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"]
+      ["0☆试做机三号", "光属性", "攻击者", "小体型", "士兵", "美乳", "输出"],
+      ["0☆法斯菁英近卫 安娜", "火属性", "守护者", "人类", "防御", "士兵"],
+      ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
+      ["0☆法斯精锐骑士 布兰", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
     ]
 
     function getDevice() {
@@ -301,7 +302,7 @@
 
 <body style="background:#F8F8FF" id="body">
   <div id="center_box">
-    <h1>全境征才计算器 Ver2.3 by 小r</h1>
+    <h1>全境征才计算器 Ver2.4 by 小r</h1>
 
     <button type="button" class='btn_normal btn'>攻击者</button>
     <button type="button" class='btn_normal btn'>守护者</button>
@@ -357,7 +358,18 @@
     </table>
 
     <div id="foobar">
-      <b>2.3：根据贴吧反馈移除了巴尔的爆发词缀。游戏更新为小史莱姆添加了回复词缀，刷女王变难了</b></br>
+      <b>2.4: 根据贴吧反馈移回了巴尔的爆发词缀（存疑），给机娘加了爆发词缀</b></br>
+      <b>为军师补回了支援词缀</b></br>
+      <b>为艾可添加了中体型词缀</b></br>
+      <b>为狐狸添加了干扰词缀</b></br>
+      <b>移除桔梗的输出词缀</b></br>
+      <b>为米诺添加生存力</b></br>
+      <b>添加了布兰</b></br>
+      <b>为试作机添加了输出词缀</b></br>
+      <b>修正安娜为火属性</b></br>
+      <b>注意到1星是没有士兵词缀的(?)，已经全部移除</b></br>
+      <br/>
+      2.3：根据贴吧反馈移除了巴尔的爆发词缀。游戏更新为小史莱姆添加了回复词缀，刷女王变难了</br>
       2.2：添加了史莱姆女王的数据。以及其他新角色的不完整数据</br>
       发现国内地址还能用，可以尝试去用： <a href="https://xiaorrr.gitee.io/tenkafuma/">https://xiaorrr.gitee.io/tenkafuma/</a></br>
       已经过一个月的测试，基本稳定。有错误联系【克里斯之门攻略组】 群号1009723104，带上错误信息</br>
