--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
     .pc-style {
       width: 75%;
+      zoom: 0.4;
       margin: 0 auto;
     }
   </style>
@@ -375,6 +376,7 @@
         <b>机娘：添加输出和中体型词缀</b></br>
         <b>蛇后：添加爆发力 贫乳 魔族词缀，个人猜想有干扰词缀（存疑），先加上了</b></br>
         换了一个更朴素的颜色</br>
+        PC页面缩放默认为40%</br>
       <br/>
       2.4: 根据贴吧反馈移回了巴尔的爆发词缀（存疑），给机娘加了爆发词缀</br>
       为军师补回了支援词缀</br>
