--- a/index.html
+++ b/index.html
@@ -94,12 +94,6 @@
             // tags.push(this.innerHTML);
           } else {
             this.className = 'btn_normal btn';
-            // for (let i = 0; i < arr.length; i++) {
-            //   if (tags[i] == this.innerHTML) {
-            //     tags.splice(i, 1);
-            //     break;
-            //   }
-            // }
           }
           searchAndShow();
         }
@@ -267,13 +261,13 @@
     }
 
     var dataset = [
-      ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力(?)", "输出"],
-      ["3☆魔王 撒旦", "领袖", "暗属性", "魔族", "中体型", "守护者", "生存力", "回击"],
+      ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力", "输出"],
+      ["3☆魔王 撒旦", "领袖", "暗属性", "魔族", "中体型", "守护者", "生存力", "回击", "防御(?)"],
       ["3☆精灵王 赛露西亚", "领袖", "风属性", "亚人", "中体型", "巨乳(?)", "辅助者", "爆发力", "支援"],
       ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力", "输出"],
       ["3☆法斯公主 露露", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出"],
-      ["3☆蛇女之后 梅斯米奈雅(收集中)", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)"],
+      ["3☆蛇女之后 梅斯米奈雅(收集中)", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱(?)"],
       ["3☆KS-VIII 魔人偶", "暗属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
 
       ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
@@ -345,7 +339,7 @@
 
 <body style="background:#F8F8FF" id="body">
   <div id="center_box">
-    <h1>全境征才计算器 Ver2.6 by 小r</h1>
+    <h1>全境征才计算器 Ver2.7 by 小r</h1>
 
     <button type="button" class='btn_normal btn'>攻击者</button>
     <button type="button" class='btn_normal btn'>守护者</button>
@@ -401,17 +395,18 @@
     </table>
 
     <div id="foobar">
-      2.6 <b>新增了查询指定角色必出词缀的功能，只需要在结果表格里点击对应角色就可以查看。对于2词必出角色，会显示很多重复的3词，注意自行筛选。该功能不会将“菁英”词缀考虑在内</b></br>
+      <b> 2.7 发现领袖与防御、削弱能同时出现，猜想撒旦有防御，蛇后有削弱。收集到一例爆发力出巴尔的案例，去除爆发力的问号。</b></br>
+      2.6 新增了查询指定角色必出词缀的功能，只需要在结果表格里点击对应角色就可以查看。对于2词必出角色，会显示很多重复的3词，注意自行筛选。该功能不会将“菁英”词缀考虑在内</br>
       2.5 <b><font color="red">新增了存疑词缀，会设为蓝色，需要自行判断。</br>
         本计算器的领袖词缀由于样本过少，可能出现各种疏漏。
-        对于领袖词缀的选择请借助其他渠道再次确认</font></b></br>
-        <b>主要更新了领袖的词缀：</b></br>
-        <b>伊布：回复改为输出</b></br>
-        <b>巴尔：爆发改为存疑（贴吧有出货的），添加输出</b></br>
-        <b>矮人王：添加输出</b></br>
-        <b>精灵王：巨乳改为存疑，因为没见人出过这个词</b></br>
-        <b>机娘：添加输出和中体型词缀</b></br>
-        <b>蛇后：添加爆发力 贫乳 魔族词缀，个人猜想有干扰词缀（存疑），先加上了</b></br>
+        对于领袖词缀的选择请借助其他渠道再次确认</font></br>
+        主要更新了领袖的词缀：</br>
+        伊布：回复改为输出</br>
+        巴尔：爆发改为存疑（贴吧有出货的），添加输出</br>
+        矮人王：添加输出</br>
+        精灵王：巨乳改为存疑，因为没见人出过这个词</br>
+        机娘：添加输出和中体型词缀</br>
+        蛇后：添加爆发力 贫乳 魔族词缀，个人猜想有干扰词缀（存疑），先加上了</br>
         换了一个更朴素的颜色</br>
         PC页面缩放默认为40%</br>
       <br/>
