--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
       2.6 新增了查询指定角色必出词缀的功能，只需要在结果表格里点击对应角色就可以查看。对于2词必出角色，会显示很多重复的3词，注意自行筛选。该功能不会将“菁英”词缀考虑在内</br>
       2.5 <b><font color="red">新增了存疑词缀，会设为蓝色，需要自行判断。</br>
         本计算器的领袖词缀由于样本过少，可能出现各种疏漏。
-        对于领袖词缀的选择请借助其他渠道再次确认</font></br>
+        对于领袖词缀的选择请借助其他渠道再次确认</font></b></br>
         主要更新了领袖的词缀：</br>
         伊布：回复改为输出</br>
         巴尔：爆发改为存疑（贴吧有出货的），添加输出</br>
