--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
 <body style="background:#F8F8FF" id="body">
   <div id="center_box">
-    <h1>全境征才计算器 Ver2.7 by 小r</h1>
+    <h1 style="display: inline;">全境征才计算器 Ver2.8 by 小r</h1><small>邀请码 USHL2U</small></br>
 
     <button type="button" class='btn_normal btn'>攻击者</button>
     <button type="button" class='btn_normal btn'>守护者</button>
@@ -395,7 +395,8 @@
     </table>
 
     <div id="foobar">
-      <b> 2.7 发现领袖与防御、削弱能同时出现，猜想撒旦有防御，蛇后有削弱。收集到一例爆发力出巴尔的案例，去除爆发力的问号。</b></br>
+      <b>2.8 由@lixiaoyaosi确认了蛇后的削弱词缀</br></b>
+      2.7 发现领袖与防御、削弱能同时出现，猜想撒旦有防御，蛇后有削弱。收集到一例爆发力出巴尔的案例，去除爆发力的问号。</br>
       2.6 新增了查询指定角色必出词缀的功能，只需要在结果表格里点击对应角色就可以查看。对于2词必出角色，会显示很多重复的3词，注意自行筛选。该功能不会将“菁英”词缀考虑在内</br>
       2.5 <b><font color="red">新增了存疑词缀，会设为蓝色，需要自行判断。</br>
         本计算器的领袖词缀由于样本过少，可能出现各种疏漏。
