--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
     var dataset = [
       ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力", "输出"],
-      ["3☆魔王 撒旦", "领袖", "暗属性", "魔族", "中体型", "守护者", "生存力", "回击", "防御(?)"],
+      ["3☆魔王 撒旦", "领袖", "暗属性", "魔族", "中体型", "守护者", "生存力", "回击", "防御"],
       ["3☆精灵王 赛露西亚", "领袖", "风属性", "亚人", "中体型", "巨乳(?)", "辅助者", "爆发力", "支援"],
       ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力", "输出"],
       ["3☆法斯公主 露露", "领袖", "风属性", "人类", "治疗者", "回复"],
@@ -395,12 +395,13 @@
     </table>
 
     <div id="foobar">
+      <h1><font color="red"><b>一个中国是我国的底线</br></b></font></h1>
       <b>2.8 由@lixiaoyaosi确认了蛇后的削弱词缀</br></b>
       2.7 发现领袖与防御、削弱能同时出现，猜想撒旦有防御，蛇后有削弱。收集到一例爆发力出巴尔的案例，去除爆发力的问号。</br>
       2.6 新增了查询指定角色必出词缀的功能，只需要在结果表格里点击对应角色就可以查看。对于2词必出角色，会显示很多重复的3词，注意自行筛选。该功能不会将“菁英”词缀考虑在内</br>
-      2.5 <b><font color="red">新增了存疑词缀，会设为蓝色，需要自行判断。</br>
+      2.5 <b>新增了存疑词缀，会设为蓝色，需要自行判断。</br>
         本计算器的领袖词缀由于样本过少，可能出现各种疏漏。
-        对于领袖词缀的选择请借助其他渠道再次确认</font></b></br>
+        对于领袖词缀的选择请借助其他渠道再次确认</b></br>
         主要更新了领袖的词缀：</br>
         伊布：回复改为输出</br>
         巴尔：爆发改为存疑（贴吧有出货的），添加输出</br>
