--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
       zoom: 0.4;
       margin: 0 auto;
     }
+    
+    #foobar {
+      margin: 20px;
+      border: 1px solid #065279;
+      border-radius: 10px;
+      padding: 10px;
+    }
   </style>
   <script type="text/javascript">
     var tags = [];
@@ -396,7 +403,12 @@
 
     <div id="foobar">
       <h1><font color="red"><b>一个中国是我国的底线</br></b></font></h1>
-      <b>2.8 由@lixiaoyaosi确认了蛇后的削弱词缀</br></b>
+<div id="foobar">
+      <h1><font color="red"><b>一个中国是我国的底线</br></b></font></h1>
+      之前的群全部变成水群了，有无游戏群，没有我自己建了一个( 625741657 ), 为了证明你是玩家需要回答问题。<br/>
+      <img src="qrcode.jpg" width="40%" height="40%"></br>
+      <b>2.9 由@帝国の栄光に輝い确认了巴尔的防御词缀</b></br>
+      2.8 由@lixiaoyaosi确认了蛇后的削弱词缀</br>
       2.7 发现领袖与防御、削弱能同时出现，猜想撒旦有防御，蛇后有削弱。收集到一例爆发力出巴尔的案例，去除爆发力的问号。</br>
       2.6 新增了查询指定角色必出词缀的功能，只需要在结果表格里点击对应角色就可以查看。对于2词必出角色，会显示很多重复的3词，注意自行筛选。该功能不会将“菁英”词缀考虑在内</br>
       2.5 <b>新增了存疑词缀，会设为蓝色，需要自行判断。</br>
