--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力", "输出"],
       ["3☆法斯公主 露露", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出"],
-      ["3☆蛇女之后 梅斯米奈雅(收集中)", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱(?)"],
+      ["3☆蛇女之后 梅斯米奈雅", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱"],
       ["3☆KS-VIII 魔人偶", "暗属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
 
       ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
@@ -346,7 +346,7 @@
 
 <body style="background:#F8F8FF" id="body">
   <div id="center_box">
-    <h1 style="display: inline;">全境征才计算器 Ver2.8 by 小r</h1><small>邀请码 USHL2U</small></br>
+    <h1 style="display: inline;">全境征才计算器 Ver2.9 by 小r</h1><small>邀请码 USHL2U</small></br>
 
     <button type="button" class='btn_normal btn'>攻击者</button>
     <button type="button" class='btn_normal btn'>守护者</button>
@@ -403,10 +403,10 @@
 
     <div id="foobar">
       <h1><font color="red"><b>一个中国是我国的底线</br></b></font></h1>
-      之前的群全部变成水群了，有无游戏群，没有我自己建了一个( 625741657 ), 为了证明你是玩家需要回答问题。<br/>
+      之前的群全部变成水群了，我自己建了一个( 625741657 ), 为了证明你是玩家需要回答问题。<br/>
       <a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=4_4sFqXIkakSoH-7ClLW-5uu8eUPJovG&jump_from=webapi">点击这里一键加群</a></br>
       <img src="qrcode.jpg" width="40%" height="40%"></br>
-      <b>2.9 由@帝国の栄光に輝い确认了巴尔的防御词缀</b></br>
+      <b>2.9 由@帝国の栄光に輝い确认了撒旦的防御词缀</b></br>
       2.8 由@lixiaoyaosi确认了蛇后的削弱词缀</br>
       2.7 发现领袖与防御、削弱能同时出现，猜想撒旦有防御，蛇后有削弱。收集到一例爆发力出巴尔的案例，去除爆发力的问号。</br>
       2.6 新增了查询指定角色必出词缀的功能，只需要在结果表格里点击对应角色就可以查看。对于2词必出角色，会显示很多重复的3词，注意自行筛选。该功能不会将“菁英”词缀考虑在内</br>
