--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
       ["0☆双蛇军团士兵 夏琳", "火属性", "守护者", "人类", "美乳", "中体型", "防御", "群体攻击", "保护", "士兵"],
       ["0☆烈日国巫女 枫", "风属性", "治疗者", "人类", "美乳", "中体型", "回复", "越战越强", "士兵"],
       ["0☆主神教团僧兵 克蕾雅", "光属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
-      ["0☆试做机三号", "光属性", "攻击者", "小体型", "士兵", "美乳", "输出"],
-      ["0☆法斯菁英近卫 安娜", "火属性", "守护者", "人类", "防御", "士兵"],
+      ["0☆试做机三号", "光属性", "攻击者", "小体型", "士兵", "美乳", "输出", "生存力"],
+      ["0☆法斯菁英近卫 安娜", "火属性", "守护者", "人类", "中体型", "防御", "士兵", "保护", "美乳"],
       ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
       ["0☆法斯精锐骑士 布兰", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
     ]
